--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://fav.farm///🍍" />
   <title>Webcam Fun</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <div class="controls">
       <button onClick="takePhoto()">Take Photo</button>
       
-      <div class="rgb">
+      <!-- <div class="rgb">
         <label for="rmin">Red Min:</label>
         <input type="range" min=0 max=255 name="rmin">
         <label for="rmax">Red Max:</label>
@@ -31,7 +32,7 @@
         <label for="bmax">Blue Max:</label>
         <input type="range" min=0 max=255 name="bmax">
       </div>
-    </div>
+    </div> -->
 
     <canvas class="photo"></canvas>
     <video class="player"></video>
